# sample_juce_plugin

./: .gitmodules  CMakeLists.txt
cmake/: get_cpm.cmake
plugin/: CMakeLists.txt
src/: main.cpp
test/: CMakeLists.txt
test/src/: test_audioprocessor.cpp
